# hash_table_on_stack

./: CMakeLists.txt  Kerr.h  README.md  SmallHashT.cpp  SmallHashT.h  prime_checks.h
test/: CMakeLists.txt  TestSmallHashT.cpp  Tests.cpp  Tests.h
